@startuml
'https://plantuml.com/class-diagram

    abstract class AbstractAircraft {
        +forword():void
        +shoot():void
    }

    class MobEnemy
    class EliteEnemy

    AbstractAircraft <|-- MobEnemy : 继承
    AbstractAircraft <|-- EliteEnemy : 继承

    interface AircraftFactory {
        + createAircraft():AbstractAircraft
    }

    class MobEnemyFactory {
        + createAircraft():AbstractAircraft
            }
    class EliteEnemyFactory {
        + createAircraft():AbstractAircraft
    }

     AircraftFactory <|.. MobEnemyFactory : 实现
     AircraftFactory <|.. EliteEnemyFactory : 实现

     MobEnemyFactory ..> MobEnemy : 创建
     EliteEnemyFactory ..> EliteEnemy : 创建


                class RandomEnemySpawner {
                    // 这个类将被 Game 调用，它负责随机选择具体的工厂
                    - factoryList:List<AircraftFactory>
                    - rateList:List<Double>
                    - random:Random
                    --
                    + spawnEnemy():AbstractAircraft
                }

            Game --> RandomEnemySpawner : 使用

            RandomEnemySpawner --> AircraftFactory : 引用/选择

@enduml